# team_POI

./: CMakeLists.txt  Model.sql  PSEdb.db  README.md  package.xml  poi.sql  points.sql  requirements.txt  room.sql  wing.sql
db/: Model.sql
db/team_POI/: PSEdb.db  poi.sql  points.sql  room.sql
launch/: full_sim_setup.launch  load_map.launch  navigate_points.launch  poi_launchfile.launch
maps/: foyer_try1.pgm  foyer_try1.yaml
scripts/: go_to_testpoint.py  goal_listener.py  poi_interface.py  poi_service_node.py  terminal_navigator.py
src/: navigate_points.py
srv/: GetPoiInfo.srv
