<?xml version="1.0"?>
<package format="2">
  <name>point_navigator</name>
  <version>0.0.0</version>
  <description>The point_navigator package</description>

  <maintainer email="lamayne@todo.todo">lamayne</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <exec_depend>rospkg</exec_depend>

  <depend>actionlib</depend>
  <depend>move_base_msgs</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>diagnostic_msgs</depend>
  
  <depend>movement_api</depend>

</package>